# fluent-telegrinder

./: .ruff.toml  LICENSE  README.md  pyproject.toml
src/fluent_telegrinder/: __init__.py  cli.py  config.py  i18n.py  sources.py
src/telefluent/: cli.py  i18n.py  sources.py
