[project]
name = "fluent-telegrinder"
version = "1.1.0"
description = "Fluent i18n implementation for telegrinder"
readme = "README.md"
authors = [{ name = "univied", email = "amerfoe@gmail.com" }]
requires-python = ">=3.14,<4.0"
dependencies = ["fluent-runtime>=0.4.0", "typer>=0.20.0"]

keywords = ["telegram", "bot", "fluent"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.uv]
package = true

[project.scripts]
ftg = "fluent_telegrinder.cli:app"

[project.urls]
Homepage = "https://github.com/univied/fluent-telegrinder/blob/main/README.md"
Repository = "https://github.com/univied/fluent-telegrinder"

[tool.uv.sources]
telegrinder = { git = "https://github.com/timoniq/telegrinder" }

[dependency-groups]
dev = [
    "ruff>=0.14.7",
    "telegrinder",
]
